kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wkapp
spec:
  selector:
    app: wkapp
  ports:
    - protocol: TCP
      port: 5000
