kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: wkapp-ingress
spec:
  tls:
    - hosts:
        - wkapp.local # placeholder
      secretName: tls-secrets
  rules:
    - host: wkapp.local # placeholder
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wkapp
                port:
                  number: 5000
